dodao nedostajući html tag

--- a/sandbox/wms.html
+++ b/sandbox/wms.html
@@ -1,301 +1,290 @@
-<!doctype html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <title> Svetiljke Tivat </title>
-        <link rel="stylesheet" href="../assets/ol3/css/ol.css" type="text/css" />
-        <link rel="stylesheet" href="../assets/css/samples.css" type="text/css" />                
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    </head>
-    <body>
-        <div class="row">
-            <div class='panel-heading text-center panel-relative'>
-                <h1>Katastar ulične rasvjete u Tivtu</h1>
-            </div>            
+<!DOCTYPE html>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Svetiljke Tivat</title>
+  <link rel="stylesheet" href="../assets/ol3/css/ol.css" type="text/css" />
+  <link rel="stylesheet" href="../assets/css/samples.css" type="text/css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+</head>
+<html>
+  <body>
+    <div class="row">
+      <div class="panel-heading text-center panel-relative">
+        <h1>Katastar ulične rasvjete u Tivtu</h1>
+      </div>
+    </div>
+    <div class="row"></div>
+    <div class="row">
+      <div class="col-md-2">
+        <div class="form-group">
+          <label for="atribut">Odaberite atribut pretrage:</label>
+          <select class="form-control" id="atribut">
+            <option value="tip_stuba">Tip stuba</option>
+            <option value="visina_stu">Visina stuba</option>
+            <option value="broj_sveti">Broj svetiljki</option>
+            <option value="snaga_sija">Snaga sijalice</option>
+            <option value="tip_sijali">Tip sijalice</option>
+            <option value="trafostani">Trafostanica</option>
+            <option value="udaljenost">Udaljenost</option>
+            <option value="ulica_nazi">Naziv ulice</option>
+            <option value="tip_mreze">Tip mreže</option>
+            <option value="oznaka_sve">Oznaka svetiljke</option>
+          </select>
         </div>
-        <div class="row">
+        <div class="form-group">
+          <label for="vrijednost">Vrijednost za pretra&#382;ivanje:</label>
+          <input type="text" class="form-control" id="vrijednost" />
         </div>
-        <div class="row">
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="atribut">Odaberite atribut pretrage:</label>
-                    <select class="form-control" id="atribut">
-                        <option value="tip_stuba">Tip stuba</option>
-                        <option value="visina_stu">Visina stuba</option>
-                        <option value="broj_sveti">Broj svetiljki</option>
-                        <option value="snaga_sija">Snaga sijalice</option>
-                        <option value="tip_sijali">Tip sijalice</option>
-                        <option value="trafostani">Trafostanica</option>
-                        <option value="udaljenost">Udaljenost</option>
-                        <option value="ulica_nazi">Naziv ulice</option>
-                        <option value="tip_mreze">Tip mreže</option>
-                        <option value="oznaka_sve">Oznaka svetiljke</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="vrijednost">Vrijednost za pretra&#382;ivanje:</label>
-                    <input type="text" class="form-control" id="vrijednost">
-                </div>
-                <div class="form-group">
-                    <button type="button" class="btn btn-primary" id="btnPretraga" onclick="pretraga()">Pretraga</button>
-                    <button type="button" class="btn btn-danger" id="btnRestart" onclick="restartovanje()">Restart</button>
-                </div>                
-                    <div id="info"></div>
-                    <div id="layertree"></div>    
-                    <div id="name"></div>
-            </div>
-            <div class="col-md-10">
-                    <div id="map" class="half-map"></div>
-                    <div id="overlay" style="background-color: white; border-radius:10px; border: 1px solid black; padding: 5px 10px;"></div>
-            </div>
+        <div class="form-group">
+          <button type="button" class="btn btn-primary" id="btnPretraga" onclick="pretraga()">Pretraga</button>
+          <button type="button" class="btn btn-danger" id="btnRestart" onclick="restartovanje()">Restart</button>
         </div>
-        
-
-    
+        <div id="info"></div>
+        <div id="layertree"></div>
+        <div id="name"></div>
+      </div>
+      <div class="col-md-10">
+        <div id="map" class="half-map"></div>
+        <div id="overlay" style="background-color: white; border-radius:10px; border: 1px solid black; padding: 5px 10px;"></div>
+      </div>
+    </div>
 
     <!--<script src="../assets/ol3/js/ol.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.6.0/ol.js"></script>
     <!--<script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>-->
-    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js'></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>            
+    <script>
+      var tiledRaster = new ol.layer.Tile({ source: new ol.source.OSM(), name: "Podloga" });
 
+      function pretraga() {}
 
-        var tiledRaster = new ol.layer.Tile({source: new ol.source.OSM(), name: "Podloga"});
-  
+      function restartovanje() {}
 
-
-function pretraga(){
-
-
-}
-
-
-function restartovanje(){
-
-}
-
-
-
-    var svetiljkeRaster = new ol.layer.Tile({
+      var svetiljkeRaster = new ol.layer.Tile({
         title: "Svetiljke raster",
         name: "Svetiljke raster",
         source: new ol.source.TileWMS({
-            url: 'http://localhost/geoserver/winsoft/wms',
-            params: {
-                'LAYERS': 'winsoft:svetiljke'       
-            },
-            crossOrigin: 'anonymous' 
+          url: "http://localhost/geoserver/winsoft/wms",
+          params: {
+            LAYERS: "winsoft:svetiljke"
+          },
+          crossOrigin: "anonymous"
         })
-    })
+      });
 
-    var bareRaster = new ol.layer.Tile({
+      var bareRaster = new ol.layer.Tile({
         title: "Svetiljke raster",
         name: "Svetiljke raster",
         source: new ol.source.TileWMS({
-            url: 'http://localhost/geoserver/winsoft/wms',
-            params: {
-                'LAYERS': 'winsoft:bare'       
-            },
-            crossOrigin: 'anonymous' 
+          url: "http://localhost/geoserver/winsoft/wms",
+          params: {
+            LAYERS: "winsoft:bare"
+          },
+          crossOrigin: "anonymous"
         })
-    })
+      });
 
-    var bioceRaster = new ol.layer.Tile({
+      var bioceRaster = new ol.layer.Tile({
         title: "Svetiljke raster",
         name: "Svetiljke raster",
         source: new ol.source.TileWMS({
-            url: 'http://localhost/geoserver/winsoft/wms',
-            params: {
-                'LAYERS': 'winsoft:bioce'       
-            },
-            crossOrigin: 'anonymous' 
+          url: "http://localhost/geoserver/winsoft/wms",
+          params: {
+            LAYERS: "winsoft:bioce"
+          },
+          crossOrigin: "anonymous"
         })
-    })
+      });
 
-    var bliznaRaster = new ol.layer.Tile({
+      var bliznaRaster = new ol.layer.Tile({
         title: "Svetiljke raster",
         name: "Svetiljke raster",
         source: new ol.source.TileWMS({
-            url: 'http://localhost/geoserver/winsoft/wms',
-            params: {
-                'LAYERS': 'winsoft:blizna'       
-            },
-            crossOrigin: 'anonymous' 
+          url: "http://localhost/geoserver/winsoft/wms",
+          params: {
+            LAYERS: "winsoft:blizna"
+          },
+          crossOrigin: "anonymous"
         })
-    })
+      });
 
-    var doljaniRaster = new ol.layer.Tile({
+      var doljaniRaster = new ol.layer.Tile({
         title: "Svetiljke raster",
         name: "Svetiljke raster",
         source: new ol.source.TileWMS({
-            url: 'http://localhost/geoserver/winsoft/wms',
-            params: {
-                'LAYERS': 'winsoft:doljani'       
-            },
-            crossOrigin: 'anonymous' 
+          url: "http://localhost/geoserver/winsoft/wms",
+          params: {
+            LAYERS: "winsoft:doljani"
+          },
+          crossOrigin: "anonymous"
         })
-    })
+      });
 
-var overlay = new ol.Overlay({position: 'bottom-center', element: document.getElementById('overlay')});
+      var overlay = new ol.Overlay({ position: "bottom-center", element: document.getElementById("overlay") });
 
-            var center = ol.proj.transform([18.8, 42.4], 'EPSG:4326', 'EPSG:3857');
-            var view = new ol.View({
-                center: center,
-                zoom: 12,
-            });
+      var center = ol.proj.transform([18.8, 42.4], "EPSG:4326", "EPSG:3857");
+      var view = new ol.View({
+        center: center,
+        zoom: 12
+      });
 
-            var map = new ol.Map({
-                target: 'map',
-                layers: [tiledRaster, svetiljkeRaster, bareRaster, bioceRaster, bliznaRaster, doljaniRaster],//
-                view: view
-            });
+      var map = new ol.Map({
+        target: "map",
+        layers: [tiledRaster, svetiljkeRaster, bareRaster, bioceRaster, bliznaRaster, doljaniRaster], //
+        view: view
+      });
 
-            //map.addControl(new ol.Control.LayerSwitcher());
+      //map.addControl(new ol.Control.LayerSwitcher());
 
+      //Klik na feature
+      map.on("click", onMouseClick);
 
+      function onMouseClick(browserEvent) {
+        var coordinate = browserEvent.coordinate;
+        var pixel = map.getPixelFromCoordinate(coordinate);
+        var element = overlay.getElement();
+        //var el = document.getElementById('name');
+        element.innerHTML = "";
+        map.forEachFeatureAtPixel(pixel, function(feature) {
+          element.innerHTML += "Tip stuba: " + feature.get("tip_stuba") + "<br>";
+          element.innerHTML += "Visina stuba: " + feature.get("visina_stu") + "<br>";
+          element.innerHTML += "Broj svetiljki: " + feature.get("broj_sveti") + "<br>";
+          element.innerHTML += "Snaga sijalice: " + feature.get("snaga_sija") + "<br>";
+          element.innerHTML += "Tip sijalice: " + feature.get("tip_sijali") + "<br>";
+          element.innerHTML += "Trafostanica: " + feature.get("trafostani") + "<br>";
+          element.innerHTML += "Udaljenost: " + feature.get("udaljenost") + "<br>";
+          element.innerHTML += "Naziv ulice: " + feature.get("ulica_nazi") + "<br>";
+          element.innerHTML += "Tip mreže: " + feature.get("tip_mreze") + "<br>";
+          element.innerHTML += "Oznaka svetiljke: " + feature.get("oznaka_sve") + "<br><hr>";
+        });
+        overlay.setPosition(coordinate);
+        map.addOverlay(overlay);
+      }
 
-//Klik na feature
-map.on('click', onMouseClick);
+      //Dodavanje drveta lejera
+      // Name the root layer group
+      map.getLayerGroup().set("name", "Lejeri");
 
-function onMouseClick(browserEvent) {
-    var coordinate = browserEvent.coordinate;
-    var pixel = map.getPixelFromCoordinate(coordinate);
-    var element = overlay.getElement();
-    //var el = document.getElementById('name');
-    element.innerHTML = '';
-    map.forEachFeatureAtPixel(pixel, function(feature) {
-        element.innerHTML += 'Tip stuba: '+ feature.get('tip_stuba') + '<br>';
-        element.innerHTML += 'Visina stuba: '+ feature.get('visina_stu') + '<br>';
-        element.innerHTML += 'Broj svetiljki: '+ feature.get('broj_sveti') + '<br>';
-        element.innerHTML += 'Snaga sijalice: '+ feature.get('snaga_sija') + '<br>';
-        element.innerHTML += 'Tip sijalice: '+ feature.get('tip_sijali') + '<br>';
-        element.innerHTML += 'Trafostanica: '+ feature.get('trafostani') + '<br>';
-        element.innerHTML += 'Udaljenost: ' + feature.get('udaljenost') + '<br>';
-        element.innerHTML += 'Naziv ulice: ' + feature.get('ulica_nazi') + '<br>';
-        element.innerHTML += 'Tip mreže: ' + feature.get('tip_mreze') + '<br>';
-        element.innerHTML += 'Oznaka svetiljke: ' + feature.get('oznaka_sve') + '<br><hr>';      
-
-    });
-    overlay.setPosition(coordinate);
-    map.addOverlay(overlay);
-}
-
-
-
-
-
-
-//Dodavanje drveta lejera
-// Name the root layer group
-map.getLayerGroup().set('name', 'Lejeri');
-
-/**
- * Build a tree layer from the map layers with visible and opacity 
- * options.
- * 
- * @param {type} layer
- * @returns {String}
- */
-function buildLayerTree(layer) {
-    var elem;
-    var name = layer.get('name') ? layer.get('name') : "Group";
-    var div = "<li data-layerid='" + name + "'>" +
-            "<span><i class='glyphicon glyphicon-file'></i> " + layer.get('name') + "</span>" +
-            "<i class='glyphicon glyphicon-check'></i> ";            
-    if (layer.getLayers) {
-        var sublayersElem = ''; 
-        var layers = layer.getLayers().getArray(),
-                len = layers.length;
-        for (var i = len - 1; i >= 0; i--) {
+      /**
+       * Build a tree layer from the map layers with visible and opacity
+       * options.
+       *
+       * @param {type} layer
+       * @returns {String}
+       */
+      function buildLayerTree(layer) {
+        var elem;
+        var name = layer.get("name") ? layer.get("name") : "Group";
+        var div =
+          "<li data-layerid='" + name + "'>" + "<span><i class='glyphicon glyphicon-file'></i> " + layer.get("name") + "</span>" + "<i class='glyphicon glyphicon-check'></i> ";
+        if (layer.getLayers) {
+          var sublayersElem = "";
+          var layers = layer.getLayers().getArray(),
+            len = layers.length;
+          for (var i = len - 1; i >= 0; i--) {
             sublayersElem += buildLayerTree(layers[i]);
-        }
-        elem = div + " <ul>" + sublayersElem + "</ul></li>";
-    } else {
-        elem = div + " </li>";
-    }
-    return elem;
-}
-
-/**
- * Initialize the tree from the map layers
- * @returns {undefined}
- */
-function initializeTree() {
-
-    var elem = buildLayerTree(map.getLayerGroup());
-    $('#layertree').empty().append(elem);
-
-    $('.tree li:has(ul)').addClass('parent_li').find(' > span').attr('title', 'Collapse this branch');
-    $('.tree li.parent_li > span').on('click', function(e) {
-        var children = $(this).parent('li.parent_li').find(' > ul > li');
-        if (children.is(":visible")) {
-            children.hide('fast');
-            $(this).attr('title', 'Expand this branch').find(' > i').addClass('glyphicon-plus').removeClass('glyphicon-minus');
+          }
+          elem = div + " <ul>" + sublayersElem + "</ul></li>";
         } else {
-            children.show('fast');
-            $(this).attr('title', 'Collapse this branch').find(' > i').addClass('glyphicon-minus').removeClass('glyphicon-plus');
+          elem = div + " </li>";
         }
-        e.stopPropagation();
-    });
-}
+        return elem;
+      }
 
-/**
- * Finds recursively the layer with the specified key and value.
- * @param {ol.layer.Base} layer
- * @param {String} key
- * @param {any} value
- * @returns {ol.layer.Base}
- */
-function findBy(layer, key, value) {
-    if (layer.get(key) === value) {
-        console.log(layer);
-        console.log(key);
-        console.log(value);
-        return layer;        
-    }
+      /**
+       * Initialize the tree from the map layers
+       * @returns {undefined}
+       */
+      function initializeTree() {
+        var elem = buildLayerTree(map.getLayerGroup());
+        $("#layertree")
+          .empty()
+          .append(elem);
 
-    // Find recursively if it is a group
-    if (layer.getLayers) {
-        var layers = layer.getLayers().getArray(),
-                len = layers.length, result;
-        for (var i = 0; i < len; i++) {
+        $(".tree li:has(ul)")
+          .addClass("parent_li")
+          .find(" > span")
+          .attr("title", "Collapse this branch");
+        $(".tree li.parent_li > span").on("click", function(e) {
+          var children = $(this)
+            .parent("li.parent_li")
+            .find(" > ul > li");
+          if (children.is(":visible")) {
+            children.hide("fast");
+            $(this)
+              .attr("title", "Expand this branch")
+              .find(" > i")
+              .addClass("glyphicon-plus")
+              .removeClass("glyphicon-minus");
+          } else {
+            children.show("fast");
+            $(this)
+              .attr("title", "Collapse this branch")
+              .find(" > i")
+              .addClass("glyphicon-minus")
+              .removeClass("glyphicon-plus");
+          }
+          e.stopPropagation();
+        });
+      }
+
+      /**
+       * Finds recursively the layer with the specified key and value.
+       * @param {ol.layer.Base} layer
+       * @param {String} key
+       * @param {any} value
+       * @returns {ol.layer.Base}
+       */
+      function findBy(layer, key, value) {
+        if (layer.get(key) === value) {
+          console.log(layer);
+          console.log(key);
+          console.log(value);
+          return layer;
+        }
+
+        // Find recursively if it is a group
+        if (layer.getLayers) {
+          var layers = layer.getLayers().getArray(),
+            len = layers.length,
+            result;
+          for (var i = 0; i < len; i++) {
             result = findBy(layers[i], key, value);
             if (result) {
-                console.log(result);
-                return result;
+              console.log(result);
+              return result;
             }
+          }
         }
-    }
 
-    return null;
-}
+        return null;
+      }
 
+      $(document).ready(function() {
+        initializeTree();
 
-$(document).ready(function() {
+        // Handle visibility control
+        $("i").on("click", function() {
+          var layername = $(this)
+            .closest("li")
+            .data("layerid");
+          var layer = findBy(map.getLayerGroup(), "name", layername);
 
-    initializeTree();
+          layer.setVisible(!layer.getVisible());
 
-    // Handle visibility control
-    $('i').on('click', function() {
-        var layername = $(this).closest('li').data('layerid');
-        var layer = findBy(map.getLayerGroup(), 'name', layername);
-
-        layer.setVisible(!layer.getVisible());
-
-        if (layer.getVisible()) {
-            $(this).removeClass('glyphicon-unchecked').addClass('glyphicon-check');
-        } else {
-            $(this).removeClass('glyphicon-check').addClass('glyphicon-unchecked');
-        }
-    });
-
-});
-
-
-
-
-
-        </script>
-    </body>
+          if (layer.getVisible()) {
+            $(this)
+              .removeClass("glyphicon-unchecked")
+              .addClass("glyphicon-check");
+          } else {
+            $(this)
+              .removeClass("glyphicon-check")
+              .addClass("glyphicon-unchecked");
+          }
+        });
+      });
+    </script>
+  </body>
 </html>
